--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "declarationMap": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "rollup.config.js"]
