--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "devsgnr-carousel",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "A Simple React.js Carousel, built using styled-components.",
   "main": "./dist/index.js",
   "keywords": [
     "react",
     "react carousel",
     "carousel",
-    "typescript"
+    "typescript",
+    "storybook"
   ],
   "typings": "./dist/index.d.ts",
   "homepage": "https://github.com/devsgnr/carousel#readme",
